<resources>
    <string name="app_name">Chatein</string>
    <string name="create_new_account">Create new Account</string>
    <string name="welcome_to_chatein">Welcome to Chatein!</string>
    <string name="full_name">Full Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="create_account">Create account</string>
    <string name="something_went_wrong">Something went wrong, please try again</string>
    <string name="logout">Logout</string>
    <string name="settings">Settings</string>
    <string name="all_users">All Users</string>
    <string name="create_a_new_account">Create a new account</string>
    <string name="login">Login</string>
    <string name="login_to_your_account">Login to your account</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="dp">dp</string>
    <string name="back_button">Back button</string>
    <string name="default_status">Hi there! I am using the new Chatein app.</string>
    <string name="status">Status</string>
    <string name="change_your_status">Change your status</string>
    <string name="save">Save</string>
    <string name="discard">Discard</string>
    <string name="your_status_is_empty">Your Status is empty</string>
    <string name="failed_to_upload_thumbnail">Failed to upload thumbnail. please try again</string>
    <string name="failed_to_upload_photo">Failed to upload photo, please try again</string>
    <string name="failed_to_compress_image">Failed to compress image</string>
    <string name="no_status">No status</string>
    <string name="no_friends">No Friends yet</string>
    <string name="failed_to_send_request">Failed to send friend request. please try again</string>
    <string name="friend_request_sent">Friend request sent!</string>
    <string name="add_friend">Add friend</string>
    <string name="accept">Accept</string>
    <string name="accepted">Accepted</string>
    <string name="cancel_request">Cancel request</string>
    <string name="failed_to_cancel_request">Failed to cancel request. Please try again</string>
    <string name="request_cancelled">Request cancelled</string>
    <string name="request_deleted">Request deleted</string>
    <string name="failed_to_accept_request">Failed to accept request. Please try again</string>
    <string name="failed_to_un_friend">Failed to un-friend user. Please try again</string>
    <string name="friends">Friends</string>
    <string name="you_are_now_friends">You are now Friends</string>
    <string name="cancel_request_confirm">Are you sure you want to cancel this request?</string>
    <string name="delete_request_confirm">Are you sure you want to delete this friend request?</string>
    <string name="un_friend_confirm">Are you sure you want to un-friend this person?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="failed_to_notify">Failed to notify</string>
    <string name="online_status">Online status</string>
    <string name="add_media">Add media</string>
    <string name="send_message">Send message</string>
    <string name="start_typing">Type a message</string>
    <string name="online">Online</string>
    <string name="image_message">Image message</string>
    <string name="google_api_key_">AIzaSyC09OYPyhV8aOyZEFPL4NhpgJ3XjbvjSns</string>
    <string name="first_chat_pointer">First chat pointer</string>
    <string name="your_chats_appear_here">Your chats appear here.</string>
    <string name="your_friends_appear_here">You can see your friends here.</string>
    <string name="friend_requests_appear_here">Friend requests sent to you appear here.</string>
    <string name="discover_users">Discover users</string>
    <string name="account_settings">Account settings</string>
    <string name="decline">Decline</string>
    <string name="declined">Declined</string>
    <string name="continue_with_google">Continue with Google</string>
    <string name="web_client_id">717200176700-iuof3d05qtlcn8r8u3kvm1nd68dkb4ms.apps.googleusercontent.com</string>
    <string name="welcome">Welcome!</string>
    <string name="delete">Delete</string>
    <string name="un_friend">Unfriend</string>
    <string name="open_chat">Open chat</string>
    <string name="image">Image</string>
    <string name="gallery">Gallery</string>
    <string name="camera">Camera</string>
    <string name="file">File</string>
    <string name="camera_permission_rationale">
        Please allow us access to your camera and storage in order to capture image and send it to your friend.
    </string>
    <string name="storage_permission_rationale">
        Please allow us access to your storage to select a file from device.
    </string>
    <string name="file_size_exceed_message">File must be under 5MB</string>
    <string name="copy">Copy</string>
    <string name="copied_to_clipboard">Copied to clipboard</string>
    <string name="seen_tick">Seen tick</string>
    <string name="cannot_copy_image">Cannot copy an image yet</string>
    <string name="cannot_copy_file">Cannot copy a file yet</string>
</resources>
