<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:animateLayoutChanges="true"
    android:padding="@dimen/default_margin">
    
    <TextView
        android:id="@+id/header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/change_your_status"
        android:textStyle="bold"
        android:layout_marginTop="20dp"
        android:textSize="25sp"/>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/new_status"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/header"
        android:layout_marginTop="20dp">

        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:selectAllOnFocus="true"
            android:hint="@string/status" />

    </android.support.design.widget.TextInputLayout>

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:layout_centerInParent="true"
        android:layout_alignBottom="@+id/new_status"
        android:indeterminate="true"
        android:visibility="gone"
        style="@style/Base.Widget.AppCompat.ProgressBar.Horizontal"/>
    
    <Button
        android:id="@+id/save_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/new_status"
        android:layout_marginTop="20dp"
        android:layout_alignParentEnd="true"
        android:textColor="@color/colorPrimaryDark"
        android:text="@string/save"
        style="?android:attr/borderlessButtonStyle" />

    <Button
        android:id="@+id/discard_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/new_status"
        android:layout_marginTop="20dp"
        android:layout_alignBottom="@+id/save_status"
        android:layout_toStartOf="@+id/save_status"
        android:textColor="@color/colorPrimary"
        android:text="@string/discard"
        style="?android:attr/borderlessButtonStyle" />

</RelativeLayout>