<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/root_layout"
    android:background="@drawable/bg_start"
    android:fitsSystemWindows="true"
    tools:context=".ui.auth.StartActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center_horizontal|bottom">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            android:gravity="center"
            android:shadowDx="0"
            android:shadowDy="20"
            android:shadowColor="@color/colorShadowTranslucent"
            android:shadowRadius="40"
            android:padding="@dimen/default_margin"
            android:text="@string/welcome_to_chatein"
            android:textSize="28sp" />

        <Button
            android:id="@+id/login_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/default_margin"
            android:layout_marginEnd="@dimen/default_margin"
            android:layout_marginBottom="@dimen/default_margin"
            android:padding="8dp"
            android:textColor="@android:color/white"
            android:textAllCaps="false"
            android:drawablePadding="-25dp"
            android:drawableStart="@drawable/ic_login"
            android:background="@drawable/bg_login_btn"
            android:foreground="@drawable/ripple_light_curved_corners"
            android:text="@string/login" />

        <Button
            android:id="@+id/register_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/default_margin"
            android:layout_marginEnd="@dimen/default_margin"
            android:layout_marginBottom="@dimen/default_margin"
            android:padding="8dp"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:drawablePadding="-25dp"
            android:drawableStart="@drawable/ic_person_add"
            android:background="@drawable/bg_register_btn"
            android:foreground="@drawable/ripple_light_curved_corners"
            android:text="@string/create_new_account" />

        <Button
            android:id="@+id/google_sign_in_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/default_margin"
            android:layout_marginEnd="@dimen/default_margin"
            android:layout_marginBottom="20dp"
            android:padding="8dp"
            android:paddingStart="@dimen/default_margin"
            android:paddingEnd="0dp"
            android:textAllCaps="false"
            android:drawablePadding="-34dp"
            android:drawableStart="@drawable/googleg_standard_color_18"
            android:background="@drawable/bg_google_btn"
            android:foreground="@drawable/ripple_dark_curved_corners"
            android:text="@string/continue_with_google"/>

    </LinearLayout>

</android.support.design.widget.CoordinatorLayout>