<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    tools:context=".ui.account.AccountSettingsActivity"
    android:animateLayoutChanges="true">

    <ImageView
        android:id="@+id/back_btn"
        android:layout_width="@dimen/action_bar_height"
        android:layout_height="@dimen/action_bar_height"
        android:scaleType="center"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        app:srcCompat="@drawable/ic_arrow_back"
        android:contentDescription="@string/back_button" />

    <RelativeLayout
        android:id="@+id/dp_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="60dp">

        <ProgressBar
            android:id="@+id/progress_bar"
            android:layout_width="250dp"
            android:layout_height="250dp"
            android:indeterminate="true"
            android:layout_centerInParent="true"
            android:theme="@style/AppTheme.WhiteAccent"/>

        <ImageView
            android:id="@+id/dp"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:src="@drawable/ic_add_user"
            android:layout_centerInParent="true"
            android:contentDescription="@string/dp" />

        <ImageButton
            android:id="@+id/edit_dp"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:scaleType="centerCrop"
            android:layout_alignBottom="@+id/dp"
            android:layout_alignEnd="@+id/dp"
            android:background="@android:color/transparent"
            app:srcCompat="@drawable/ic_add_dp"
            android:contentDescription="@string/dp" />

    </RelativeLayout>

    <TextView
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/dp_layout"
        android:layout_marginTop="40dp"
        android:padding="16dp"
        android:gravity="center_vertical"
        android:textStyle="bold"
        android:layout_centerHorizontal="true"
        android:textColor="@android:color/white"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/status"
        android:visibility="visible"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/name"
        android:gravity="center_vertical"
        android:drawableEnd="@drawable/ic_edit"
        android:hint="@string/your_status_is_empty"
        android:padding="16dp"
        android:textColor="@android:color/white" />

    <Button
        android:id="@+id/friend_count"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/status"
        android:gravity="center_vertical"
        android:layout_centerHorizontal="true"
        android:hint="@string/no_friends"
        android:textAllCaps="false"
        android:textColorHint="@color/material_grey300"
        android:textSize="20sp"
        android:padding="@dimen/default_margin"
        android:drawableEnd="@drawable/ic_people"
        android:drawablePadding="10dp"
        android:textColor="@android:color/white"
        style="?android:attr/borderlessButtonStyle" />

</RelativeLayout>