<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/root_layout"
    android:background="@android:color/white"
    android:foreground="@drawable/ripple_dark"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ProgressBar
            android:id="@+id/progress_bar"
            android:layout_width="68dp"
            android:layout_height="68dp"
            android:layout_margin="7dp"
            android:visibility="gone"
            android:layout_centerVertical="true"/>

        <ImageView
            android:id="@+id/dp"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_margin="@dimen/default_margin"
            android:layout_centerVertical="true"
            android:src="@drawable/ic_add_user_small"
            android:contentDescription="@string/dp" />

        <LinearLayout
            android:id="@+id/layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/dp"
            android:layout_toEndOf="@+id/dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:singleLine="true"
                android:ellipsize="end"
                android:layout_marginEnd="@dimen/default_margin"
                android:textSize="18sp"
                android:textColor="#333333"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="38dp"
                android:animateLayoutChanges="true"
                android:gravity="end|center_vertical"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/decline"
                    style="?android:attr/borderlessButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="20dp"
                    android:paddingEnd="20dp"
                    android:text="@string/decline"
                    android:textColor="@color/colorAccent" />

                <Button
                    android:id="@+id/accept"
                    style="?android:attr/borderlessButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="25dp"
                    android:paddingEnd="20dp"
                    android:text="@string/accept"
                    android:background="@drawable/bg_outline"
                    android:textColor="@color/colorPrimaryDark" />

            </LinearLayout>

        </LinearLayout>

    </RelativeLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginStart="80dp"
        android:background="@color/material_grey300"/>

</LinearLayout>